# event_transformer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
doc/: event_intf_impl_draft.md
include/: event_transformer.h
src/: event_transformer.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/: CMakeLists.txt  test_event_basic.cpp
